// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reducers reduceProperty reduces correctly 1`] = `
Object {
  "block": 1234,
  "borough": "manhattan",
  "documentId": "123-13432",
  "lot": 5678,
  "propertyType": "Apartment",
  "streetName": "BROADWAY",
  "streetNumber": "123 WEST 95th",
  "unit": "",
}
`;

exports[`Reducers reduceProperty reduces correctly 2`] = `
Object {
  "block": 1234,
  "borough": "bronx",
  "documentId": "123-13432",
  "lot": 5678,
  "propertyType": "Apartment",
  "streetName": "BROADWAY",
  "streetNumber": "123 WEST 95th",
  "unit": "",
}
`;

exports[`Reducers reduceProperty reduces correctly 3`] = `
Object {
  "block": 1234,
  "borough": "brooklyn",
  "documentId": "123-13432",
  "lot": 5678,
  "propertyType": "Apartment",
  "streetName": "BROADWAY",
  "streetNumber": "123 WEST 95th",
  "unit": "",
}
`;

exports[`Reducers reduceProperty reduces correctly 4`] = `
Object {
  "block": 1234,
  "borough": "queens",
  "documentId": "123-13432",
  "lot": 5678,
  "propertyType": "Apartment",
  "streetName": "BROADWAY",
  "streetNumber": "123 WEST 95th",
  "unit": "",
}
`;

exports[`Reducers reduceProperty reduces correctly 5`] = `
Object {
  "block": 1234,
  "borough": "statenIsland",
  "documentId": "123-13432",
  "lot": 5678,
  "propertyType": "Apartment",
  "streetName": "BROADWAY",
  "streetNumber": "123 WEST 95th",
  "unit": "",
}
`;
